
#
# Static libraries
#

libsethnetkit_sources = [
    'checksum.cpp',
    'EthernetPacket.cpp',
    'ICMPv4Packet.cpp',
    'ICMPv6Packet.cpp',
    'IPPacket.cpp',
    'IPv4Packet.cpp',
    'IPv6Packet.cpp',
    'Packet.cpp',
    'TCPPacket.cpp',
    'UDPPacket.cpp',
]

libsethnetkit = static_library('sethnetkit', libsethnetkit_sources, link_with: [libaccl])

