
#
# Static libraries
#

libsethnetkit_sources = [
    'checksum.cpp',
    'ethernet_packet.cpp',
    'icmpv4_packet.cpp',
    'icmpv6_packet.cpp',
    'ip_packet.cpp',
    'ipv4_packet.cpp',
    'ipv6_packet.cpp',
    'packet.cpp',
    'tcp_packet.cpp',
    'udp_packet.cpp',
]

libsethnetkit = static_library('sethnetkit', libsethnetkit_sources, link_with: [libaccl])

